<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mama\'s Food</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="add_dish">Add Dish</string>
    <string name="order_number">Order</string>
    <string name="user_radius">Radius</string>
    <string name="refresh_kitchen">Refresh</string>
    <string name="dish_update">Dish details updated</string>
    <string name="dish_added">Dish added</string>
    <string name="dish_delete">Dish Deleted Successfully</string>

    <string name="reset_password">Reset Password</string>
    <string name="update_password">Update Password</string>
    <string name="login">Login</string>
    <string name="user_button">USER</string>
    <string name="food_provider">FOOD PROVIDER</string>
    <string name="dish_details">Done</string>
    <string name="update_profile">Update Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="account_activation">Account Activation</string>
    <string name="already_have_an_account_login">Already have an account? <i>Login</i></string>
    <string name="verification_code">Verification code</string>
    <string name="email">Email</string>
    <string name="verify">Verify</string>
    <string name="close">Close</string>
    <string name="permission_denied">Permission denied !</string>
    <string name="acquiring_location">Acquiring location please wait..</string>
    <string name="permission_dialog_title">Location Permission Required</string>
    <string name="permission_dialog_message">In order to get address, Location permission is required. please grant it manually</string>
    <string name="pick_for_current_location">Pick for current location</string>
    <string name="enter_address">please provide your address</string>
    <string name="enter_phone">please provide your contact number</string>
    <string name="address">Address</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="login_failed">Login Failed!</string>
    <string name="register_failed">Registration Failed!</string>
    <string name="update_failed">Update Failed!</string>
    <string name="table_failed">Table details Failed!</string>
    <string name="password_changed">Your password successfully changed</string>
    <string name="check_password">Please enter correct password</string>
    <string name="email_not_exist">Email does not exist on server</string>
    <string name="activate_your_account">Please activate your account !</string>
    <string name="update_button">UPDATE</string>
    <string name="deliverable_status">Deliverable :</string>
    <string name="select_working_days">Select Working Days :</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="opening_time">Opening Time</string>
    <string name="kitchen_other_details_optional">Kitchen Other Details(optional)</string>
    <string name="current_location_address">Current location address</string>
    <string name="pick_for_current_location_text_view">Pick for current location</string>
    <string name="mobile_number">Mobile number</string>
    <string name="kitchen_name">Kitchen name</string>
    <string name="new_password">New password</string>
    <string name="verify_password">Verify password</string>
    <string name="update">UPDATE</string>
    <string name="send">SEND</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? SignUp</string>
    <string name="email_otp">Email otp</string>
    <string name="reset">RESET</string>
    <string name="deliverable">Deliverable :</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="dish_name">Dish name: </string>
    <string name="dish_price">Dish price</string>
    <string name="add_dish_details">Dish details</string>
    <string name="name"> Name</string>
    <string name="name_delegate">: Name</string>
    <string name="_50">: $50</string>
    <string name="dish_descriptions">Dish Descriptions</string>
    <string name="working_days">Working days :</string>
    <string name="call">Call :</string>
    <string name="order_time">Order Time :</string>
    <string name="end_time">End Time :</string>
    <string name="start_time">Start Time :</string>
    <string name="location">Location :</string>
    <string name="kitchen_name_delegate">Kitchen Name :</string>
    <string name="cancel">Cancel</string>
    <string name="location_not_enabled">Location is not enabled</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="please_select_radius">Please select radius!</string>
    <string name="provide_email">please provide a valid email</string>
    <string name="verification_code_length">Verification code must be 6 characters</string>
    <string name="activating_user">Activating User…</string>
    <string name="correct_account_verification_code">Please enter correct account Verification code</string>
    <string name="sending_failed">Sending Failed!</string>
    <string name="acticvtion_failed">Activation Failed!</string>
    <string name="deactiveed_by_admin">User deactivated by admin!</string>
    <string name="connection_time_out">connection time out</string>
    <string name="password_four_length">enter at least 4 characters</string>
    <string name="password_not_match">password does not match</string>
    <string name="updating_password">Updating your password</string>
    <string name="dish_price_delegate">Dish Price :</string>
    <string name="continue_button">Continue</string>
    <string name="loading_kitchens_dialog">Loading Kitchens…</string>
    <string name="login_progress_dialog">Logging In..</string>
    <string name="emai_error">please provide a valid email</string>
    <string name="password_error">Enter minimum 4 alphanumeric characters</string>
    <string name="add_dish_navigation">Add Dish</string>
    <string name="update_profile_navigation">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="email_error">please provide a valid email</string>
    <string name="recovery_message">Please check your Email for new password</string>
    <string name="recovery_failed">Recovery Failed!</string>
    <string name="valid_email">provide a valid EmailAddress</string>
    <string name="recovery_email">Sending Recovery Mail</string>
    <string name="password_character">enter at least 3 characters</string>
    <string name="resting_password">Resting your password</string>
    <string name="resetting_failed">Resetting Failed!</string>
    <string name="old_password">old Password is wrong</string>
    <string name="your_password_changed">Your password successfully changed</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="button_continue">Continue</string>
    <string name="camera_storage_permission">Camera and Storage Permission required for this app</string>
    <string name="go_settings_permission">Go to settings and enable permissions</string>
    <string name="ok_button">OK</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_library">Choose from Library</string>
    <string name="cancel_photo">Cancel</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_file">Select File</string>
    <string name="photo_cancel">Cancel</string>
    <string name="restaurant_name">please provide restaurant name</string>
    <string name="password_characters_four">enter at least 4 characters</string>
    <string name="password_does_not_match">password does not match</string>
    <string name="select_time">Select Time</string>
    <string name="activation_code_send_message">Activation code has been sent to you! Please check your Email</string>
    <string name="registering_kitchen">Registering Kitchen…</string>
    <string name="update_profile_message">updating profile…</string>
    <string name="update_title">Update</string>
    <string name="provide_dish_name">please provide dish name</string>
    <string name="provide_dish_price">please provide dish price</string>
    <string name="provide_dish_description">please dish descriptions max 120 word</string>
    <string name="adding_dish">Adding Dish…</string>
    <string name="updating_message">Updating…</string>
    <string name="all_dishes">All Dishes</string>
    <string name="delete_title">Delete</string>
    <string name="delete_dish">Do you want to delete this dish?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="logout_dialog">Do you really want to logout?</string>
    <string name="update_dish">Update Dish</string>
</resources>
