<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_dish"
            android:icon="@drawable/menu"
            android:title="@string/add_dish_navigation" />

        <item
            android:id="@+id/update_profile"
            android:icon="@drawable/edit_user"
            android:title="@string/update_profile_navigation" />
        <item
            android:id="@+id/change_password"
            android:icon="@drawable/change_password"
            android:title="@string/change_password" />

        <item
            android:id="@+id/admin_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>
