<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/email"
                    android:textColorHint="#000"
                    android:textColor="#000"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingTop="@dimen/floating_hint_margin"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/password"
                    android:textColorHint="#000"
                    android:textColor="#000"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingTop="@dimen/floating_hint_margin"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:textColor="#000"
                android:text="@string/forgot_password"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_button_background"
                android:text="@string/login"
                android:textColor="#000" />

            <TextView
                android:id="@+id/sign_up_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/don_t_have_an_account_signup"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>