<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home_background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/kitchen_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#000" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/kitchen_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/kitchen_name"
                        android:inputType="text"
                        android:paddingLeft="10sp"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textColorHint="#000"
                        android:textColor="#000"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10sp"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textColorHint="#000"
                        android:textColor="#000"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mobile_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/mobile_number"
                        android:paddingLeft="10sp"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textColorHint="#000"
                        android:textColor="#000"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="10sp"
                        android:textColorHint="#000"
                        android:textColor="#000"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/verify_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/verify_password"
                        android:inputType="textPassword"
                        android:textColorHint="#000"
                        android:textColor="#000"
                        android:paddingLeft="10sp"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/pick_for_current_location"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:drawableLeft="@mipmap/location_icon"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:textColorHint="#000"
                    android:textColor="#000"
                    android:text="@string/pick_for_current_location"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/address_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/current_location_address"
                        android:inputType="text"
                        android:paddingLeft="10sp"
                        android:enabled="false"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textColorHint="#000"
                        android:textColor="#000"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/kitchen_optional_info"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textColor="#FFF"
                    android:gravity="center"
                    android:background="#F57C00"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/kitchen_other_details_optional"/>

                <LinearLayout
                    android:id="@+id/edit_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2.0">

                    <RelativeLayout
                        android:id="@+id/Phone_one"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:padding="5dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/opening_time_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/edit_text_background"
                                android:hint="@string/opening_time"
                                android:inputType="number"
                                android:paddingLeft="10sp"
                                android:paddingTop="@dimen/floating_hint_margin"
                                android:textColor="#000"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/Phone_two"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:padding="5dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/closing_time_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/edit_text_background"
                                android:hint="@string/closing_time"
                                android:inputType="number"
                                android:paddingLeft="10sp"
                                android:paddingTop="@dimen/floating_hint_margin"
                                android:textColor="#000"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/delivery_time_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/delivery_time"
                        android:inputType="number"
                        android:paddingLeft="10sp"
                        android:textColorHint="#000"
                        android:textColor="#000"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/main_spinner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2.0">

                    <RelativeLayout
                        android:id="@+id/spinner_days"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:padding="5dp">

                        <TextView
                            android:layout_marginTop="5dp"
                            android:id="@+id/working_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:textColor="#000"
                            android:layout_gravity="center_vertical"
                            android:text="@string/select_working_days"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/spinner_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:padding="5dp">

                        <com.byteshaft.homemade.utils.MultiSelectionSpinner
                            android:id="@+id/days_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/delivery_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2.0">

                    <RelativeLayout
                        android:id="@+id/delivery_text_view_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:padding="5dp">

                        <TextView
                            android:layout_marginTop="5dp"
                            android:id="@+id/delivery_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:textColor="#000"
                            android:layout_gravity="center_vertical"
                            android:text="@string/deliverable"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/delivery_switch_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:padding="5dp">

                        <Switch
                            android:id="@+id/delivery_switch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp" />
                    </RelativeLayout>
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/login_button_background"
                    android:text="@string/create_account"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000" />
            </LinearLayout>
        </ScrollView>
</RelativeLayout>
